<resources>
    <string name="product_description">Product</string>
    <string name="total">Total</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="label_shipping">Shipping</string>
    <string name="label_tax">Tax</string>
    <string name="dummy_product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nunc magna, gravida ut orci non, egestas venenatis libero. Sed luctus, turpis at porta commodo, ipsum orci volutpat sapien, ut scelerisque diam massa lobortis odioc</string>
    <string name="dummy_product_price">$1.50</string>
    <string name="dummy_product_stock_status">In stock</string>
    <string name="dummy_product_name">Pencil</string>
    <string name="app_bar_product_detail">Product Detail</string>
    <string name="btn_remove_from_cart">Remove from cart</string>
    <string name="total_cart_items">%s items in your cart</string>
    <string name="error_image">Error image</string>
    <string name="btn_text_try_again">try again</string>
    <string name="product_list_page_title">Cart</string>
    <string name="product_detail_page_title">Product detail</string>
    <string name="formatted_product_price">$ %s</string>
    <string name="menu_search">Search</string>
</resources>