<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:paddingBottom="48dp">

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#bbbbbb"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textAllCaps="true"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="41.24"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_total" />

    <TextView
        android:id="@+id/label_subtotal"
        android:layout_marginTop="@dimen/label_dark_margin_top"
        android:text="@string/label_subtotal"
        style="@style/LabelDark"
        app:layout_constraintTop_toBottomOf="@+id/label_total"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_shipping"
        android:text="@string/label_shipping"
        style="@style/LabelDark"
        app:layout_constraintTop_toBottomOf="@+id/label_subtotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_tax"
        android:text="@string/label_tax"
        style="@style/LabelDark"
        app:layout_constraintTop_toBottomOf="@+id/label_shipping"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtotal_value"
        tools:text="36.00"
        style="@style/LabelLight"
        app:layout_constraintTop_toBottomOf="@+id/label_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_subtotal"/>

    <TextView
        android:id="@+id/shipping_value"
        tools:text="2.00"
        style="@style/LabelLight"
        app:layout_constraintTop_toBottomOf="@+id/label_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_shipping"/>

    <TextView
        android:id="@+id/tax_value"
        tools:text="3.24"
        style="@style/LabelLight"
        app:layout_constraintTop_toBottomOf="@+id/label_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_tax"/>

</androidx.constraintlayout.widget.ConstraintLayout>